--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
+Flask==2.3.2               # Web framework for building the chatbot AP
+nltk==3.8.1                # Natural Language Toolkit for text processing
+scikit-learn==1.3.0        # Machine learning library for intent classification
+tensorflow==2.13.0         # For deep learning models (optional, if using neural networks)
+numpy==1.26.0              # Numerical computations
+pandas==2.1.1              # Data manipulation and handling
 
